created generic cmac
Still need to implement innards (i.e. memory, hash, offset, etc)

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ CCmacLib/out/build/x64-debug/CMakeFiles/ShowIncludes/foo.h
 CCmacLib/out/build/x64-debug/CMakeFiles/ShowIncludes/main.c
 CCmacLib/out/build/x64-debug/CMakeFiles/TargetDirectories.txt
 CCmacLib/out/build/x64-debug/VSInheritEnvironments.txt
+CCmacLib/out/build/x64-debug/CMakeFiles/3.22.22022201-MSVC_2/CompilerIdC/CMakeCCompilerId.c
+CCmacLib/out/build/x64-debug/CMakeFiles/3.22.22022201-MSVC_2/CompilerIdCXX/CMakeCXXCompilerId.cpp
